# funidata-python-utils

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-tests.txt  requirements.txt
.github/workflows/: pytest-verify.yml  python-package.yml
funidata_utils/: __init__.py  utils.py
funidata_utils/auth/: __init__.py  aws_auth.py  basic_auth.py  credentials_manager.py  database_auth.py  sis_auth.py  sis_credentials.py  source_config.py
funidata_utils/compat/: utils_312.py  utils_legacy.py
funidata_utils/database/: __init__.py  db_util.py
funidata_utils/json_tools/: __init__.py  json_encoder.py  jsonl_utils.py
funidata_utils/request_utils/: __init__.py  async_httpx_requests.py  httpx_requests.py
funidata_utils/schemas/: __init__.py  common_serializers.py
funidata_utils/schemas/compat/: common_serializers_312.py  common_serializers_legacy.py
funidata_utils/schemas/sisu/: __init__.py  assessment_item.py  attainment.py  base.py  building.py  code_book.py  common.py  cooperation_network.py  course_unit.py  course_unit_realisation.py  curriculum_period.py  education.py  enrollment_calculation_config.py  enrolment_calculation_config.py  grade_scale.py  mobility_period.py  module.py  organisation.py  private_person.py  public_person.py  qualification.py  qualifications.py  study_right.py  study_year_template.py  term_registration.py  thesis.py
funidata_utils/sis_integration/: __init__.py  async_deletes.py  async_imports.py  exports.py  imports.py  protocols.py  sis_resources.py
funidata_utils/sis_integration/resources/: __init__.py  schemas.py  sis_resources.py
funidata_utils/xml_utils/: virtafile_to_json.py
tests/: helpers.py  test_import_batching.py  test_import_batching_no_sublist.py  test_import_batching_with_sublist.py  test_util.py
