[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[project]
name = "funidata-utils"
dynamic = ["version"]
description = "A collection of utility packages for interacting with Funidata products"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Private :: Do Not Upload"
]
authors = [
    { name = "EssKayz" },
    { name = "xTooth" }
]
dependencies = [
    "httpx>=0.28.1, <1.0.0",
    "requests>=2.32.3, <3.0.0",
    "simplejson>=3.19.3, <4.0.0",
    "pydantic-settings>=2.7.1, <3.0.0",
    "pydantic>=2.10.6, <3.0.0"
]

[project.urls]
Repository = "https://github.com/funidata/funidata-python-utils.git"

[project.optional-dependencies]

sql = [
    "SQLAlchemy>=2.0.38, <3.0.0",
    "psycopg2-binary>=2.9.10, <3.0.0",
]

xml = [
    "lxml>=5.3.1, <6.0.0",
    "xmltodict>=0.14.2, <1.0.0",
]

all = [
    "SQLAlchemy>=2.0.38, <3.0.0",
    "psycopg2-binary>=2.9.10, <3.0.0",
    "lxml>=5.3.1, <6.0.0",
    "xmltodict>=0.14.2, <1.0.0",
]

[tool.pdm]
version = { source = "file", path = "funidata_utils/__init__.py" }

[tool.pdm.build]
source-includes = [
    "tests/",
    "requirements*.txt",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "tests",
    "funidata_utils"
]
context = '${CONTEXT}'
dynamic_context = "test_function"


[tool.coverage.report]
show_missing = true
sort = "-Cover"


[tool.coverage.html]
show_contexts = true
